--- a/package.json
+++ b/package.json
@@ -2,6 +2,17 @@
     "name": "babel-plugin-module-paths-resolver",
     "version": "0.0.1",
     "description": "A plugin to resolve tsconfig paths for babel!",
+    "keywords": [
+        "babel",
+        "plugin",
+        "babel-plugin",
+        "module",
+        "paths",
+        "resolver",
+        "alias",
+        "tsconfig",
+        "jsconfig"
+    ],
     "main": "dist/index.js",
     "types": "src/index.ts",
     "files": [
@@ -25,7 +36,6 @@
         "@ainc/fs": "^0.1.8",
         "@babel/core": "^7.14.3",
         "@babel/helper-plugin-utils": "^7.13.0",
-        "strip-bom": "^5.0.0",
         "strip-json-comments": "^3.1.1"
     },
     "devDependencies": {
