--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
         "declarationMap": false,                              // 生成 `.d.ts` 映射文件
         "strict": true,                                       // 开启严格的类型检测
         "sourceMap": false,                                   // 生成 `.map` 源码映射文件
-        "esModuleInterop": false,                             // 支持`commonjs`模块通过`default`导入
+        "esModuleInterop": true,                              // 支持`commonjs`模块通过`default`导入
         "experimentalDecorators": true,                       // 支持装饰器语法
         "noImplicitAny": true,                                // 禁用`any`类型
         "allowJs": true,                                      // 允许加载`js`文件
@@ -25,7 +25,8 @@
         "outDir": "./dist",                                   // 编译后生成的文件目录
         "baseUrl": "./src",                                   // 路径基准目录
         "paths": {                                            // 路径映射
-            "@/*": ["./*"]                                    // 源文件目录
+            "@/*": ["./*"],                                   // 源文件目录
+            "@app/*": ["./app/*"]                             // 源文件目录
         }
     }
 }
